--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,12 @@
     "bookshelf": "^0.9.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "knex": "^0.9.0",
     "morgan": "~1.6.1",
+    "pg": "^4.4.4",
     "serve-favicon": "~2.3.0"
   }
 }
