--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "morgan": "~1.6.1",
     "pg": "^4.4.4",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "supertest": "^1.1.0"
   }
 }
