--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.1",
+    "express-jwt": "^3.3.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^5.5.4",
     "knex": "^0.9.0",
