--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "knex": "^0.9.0",
     "morgan": "~1.6.1",
     "pg": "^4.4.4",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "superstatic": "^4.0.1"
   },
   "devDependencies": {
     "supertest": "^1.1.0"
